--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -3,17 +3,17 @@
 
     <item
         android:id="@+id/navigation_vue1"
-        android:icon="@drawable/ic_home_bold"
+        android:icon="@drawable/ic_boat"
         android:title="@string/title_vue1" />
 
     <item
         android:id="@+id/navigation_vue2"
-        android:icon="@drawable/ic_vue2"
+        android:icon="@drawable/ic_flag"
         android:title="@string/title_vue2" />
 
     <item
         android:id="@+id/navigation_vue3"
-        android:icon="@drawable/ic_vue3"
+        android:icon="@drawable/ic_controller"
         android:title="@string/title_vue3" />
 
 </menu>
