Ajout du SplashScreen
- Ajoute SplashScreenActivity (permet d'avoir un splashscreen à la place d'une page blanche pendant le stratup time, permet aussi de lancer ce que l'on veut avant la main activity)
- Modif mineures (delete fichiers inutiles, changement dans R.strings)

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,5 +10,9 @@
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
+    <style name="AppTheme2" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowBackground">@drawable/background_launcher</item>
+    </style>
+
 
 </resources>
