--- a/app/src/main/res/layout/fragment_vue3.xml
+++ b/app/src/main/res/layout/fragment_vue3.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.example.projetdrone.FragmentVue3">
 
     <fragment
@@ -11,5 +12,25 @@
         android:name="com.google.android.gms.maps.MapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="110dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_weight="5"
+            android:layout_gravity="top"/>
+        <ImageButton
+            android:id="@+id/speed"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:src="@drawable/ic_speed"
+            android:layout_gravity="top"/>
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
