--- a/app/src/main/res/layout/fragment_vue2.xml
+++ b/app/src/main/res/layout/fragment_vue2.xml
@@ -3,11 +3,32 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <fragment
-        android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
+
+        <fragment
+            android:id="@+id/map"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <io.github.controlwear.virtual.joystick.android.JoystickView
+            xmlns:custom="http://schemas.android.com/apk/res-auto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/joystick"
+            android:layout_gravity="bottom"
+            android:padding="0dp"
+            android:layout_margin="0dp"
+            custom:JV_buttonSizeRatio="15%"
+            custom:JV_backgroundSizeRatio="25%"
+            custom:JV_buttonColor="#FF888888"
+            custom:JV_borderColor="#88444444"
+            custom:JV_backgroundColor="#88000000"
+            custom:JV_borderWidth="2dp" />
+
+    </FrameLayout>
 
 
 </LinearLayout>
