--- a/app/src/main/res/layout/fragment_vue2.xml
+++ b/app/src/main/res/layout/fragment_vue2.xml
@@ -14,10 +14,10 @@
 
 <LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="110dp"
+    android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:layout_weight="0"
-    app:layout_constraintBottom_toBottomOf="parent">
+    app:layout_constraintTop_toTopOf="parent">
 
 <TextView
     android:layout_width="0dp"
