--- a/app/src/main/res/layout/fragment_vue2.xml
+++ b/app/src/main/res/layout/fragment_vue2.xml
@@ -16,6 +16,26 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top|start"
+            android:orientation="vertical"
+            android:padding="10dp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/tv_lat_vue1"
+                android:textColor="#FFFFFF"
+                android:textSize="15sp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/tv_long_vue1"
+                android:textColor="#FFFFFF"
+                android:textSize="15sp"/>
+        </LinearLayout>
+
         <io.github.controlwear.virtual.joystick.android.JoystickView
             xmlns:custom="http://schemas.android.com/apk/res-auto"
             android:layout_width="wrap_content"
@@ -33,24 +53,25 @@
 
     </FrameLayout>
 
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:layout_weight="0"
-    app:layout_constraintTop_toTopOf="parent">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_weight="0"
+        app:layout_constraintTop_toTopOf="parent">
 
-<TextView
-    android:layout_width="0dp"
-    android:layout_height="50dp"
-    android:layout_weight="5"
-    android:layout_gravity="top"/>
-<ImageButton
-    android:id="@+id/speed"
-    android:layout_width="0dp"
-    android:layout_height="50dp"
-    android:layout_weight="1"
-    android:src="@drawable/ic_speed"
-    android:layout_gravity="top"/>
-</LinearLayout>
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_weight="5"
+        android:layout_gravity="top"/>
+    <ImageButton
+        android:id="@+id/speed"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_weight="1"
+        android:src="@drawable/ic_speed"
+        android:layout_gravity="top"/>
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
