--- a/app/src/main/res/layout/fragment_vue2.xml
+++ b/app/src/main/res/layout/fragment_vue2.xml
@@ -41,6 +41,7 @@
             android:layout_width="wrap_content"
             android:layout_height="200dp"
             android:layout_gravity="bottom|center"
+            android:layout_margin="40dp"
             app:JV_backgroundColor="#88000000"
             app:JV_buttonSizeRatio="30%"
             app:JV_backgroundSizeRatio="50%"
