--- a/app/src/main/res/layout/fragment_connexion.xml
+++ b/app/src/main/res/layout/fragment_connexion.xml
@@ -1,49 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:id="@+id/tv_ip"
-                android:layout_weight="1"
-                android:text="Adresse IP: "/>
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:id="@+id/et_ip"
-                android:layout_weight="1"/>
-        </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:id="@+id/tv_port"
-                android:layout_weight="1"
-                android:text="Port: "/>
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:id="@+id/et_port"
-                android:layout_weight="1"/>
-        </LinearLayout>
+    <TextView
+        android:id="@+id/tv_ip"
+        android:layout_width="195dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="168dp"
+        android:layout_marginBottom="15dp"
+        android:layout_weight="1"
+        android:text="Adresse IP: "
+        android:textAlignment="center"
+        android:textSize="30dp"
+        app:layout_constraintBottom_toTopOf="@+id/tv_port"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/et_ip"
+        android:layout_width="195dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="168dp"
+        android:layout_marginBottom="15dp"
+        android:layout_weight="1"
+        app:layout_constraintBottom_toTopOf="@+id/et_port"
+        app:layout_constraintStart_toEndOf="@+id/tv_ip"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_port"
+        android:layout_width="195dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="428dp"
+        android:layout_weight="1"
+        android:text="Port: "
+        android:textAlignment="center"
+        android:textSize="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_ip" />
+
+    <EditText
+        android:id="@+id/et_port"
+        android:layout_width="195dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginBottom="428dp"
+        android:layout_weight="1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/tv_port"
+        app:layout_constraintTop_toBottomOf="@+id/et_ip" />
 
     <Button
+        android:id="@+id/button_connexion"
+        style="?android:attr/borderlessButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/button_connexion"
-        android:text="Connect"/>
+        android:background="@android:color/white"
+        android:text="Connect"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.708" />
 
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
